systemd-genie (1.32) unstable; urgency=medium

        * Added error-checking to configuration variables.
        * Preserved args containing spaces.
        * Refactored code into multiple classes.

 -- Alistair Young <avatar@arkane-systems.net>  Mon, 18 Jan 2021 16:15:00 -0500

systemd-genie (1.31) unstable; urgency=medium

        * Fixed bug in path cloning.
        * Added wait on initialize for systemd to be fully running.
        * Updated documentation accordingly.

 -- Alistair Young <avatar@arkane-systems.net>  Wed, 13 Jan 2021 11:26:00 -0500

systemd-genie (1.30) unstable; urgency=medium

        * Changed to precompile .NET code.
        * Added appending of outside-bottle path to inside-bottle path
          (with dedupe) as option.
        * Moved saving of environment variables into binary, with
          configuration option in genie.ini.

 -- Alistair Young <avatar@arkane-systems.net>  Sat, 26 Dec 2020 13:47:00 -0500

systemd-genie (1.29) unstable; urgency=medium

        * Updated to use .NET 5.0 framework.
        * Changed to single-file executable (framework-dependent).
        * Modified the bottle entry to use systemd-machined.
        * Misc. cleanup.

 -- Alistair Young <avatar@arkane-systems.net>  Fri, 19 Dec 2020 07:40:00 -0500

systemd-genie (1.28) unstable; urgency=medium

        * Fixed bug preventing installation on pre-buster Debian releases.
        * Added "update-hostname" configuration setting to disable this behavior.
        * Improved WSL version detection.

 -- Alistair Young <avatar@arkane-systems.net>  Fri, 04 Sep 2020 18:48:00 -0500

systemd-genie (1.27) unstable; urgency=medium

        * Initial release (closes: Bug#968331).

 -- Alistair Young <avatar@arkane-systems.net>  Wed, 19 Aug 2020 11:35:51 -0500